@@ -1,3 +1,8 @@
+2008-02-01  Reinhard Max  <max@suse.de>
+
+	* generic/tkImgGIF.c: Fixed a buffer overflow (CVE-2006-4484).
+	* tests/imgPhoto.test: Added a test for the above.
+
 2007-12-31  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.4.17 TAGGED FOR RELEASE ***
